conda_env/2026-02-24/joblogs/2026-02-05-15-05-vcf2gene.err
Traceback (most recent call last):
  File "/share/org/YZWL/yzwl_lixg/.local/bin/biopytools", line 8, in <module>
    sys.exit(main())
  File "/share/org/YZWL/yzwl_lixg/software/biopytools/biopytools/cli/main.py", line 193, in main
    cli()
  File "/share/org/YZWL/yzwl_lixg/miniforge3/envs/biopytools/lib/python3.10/site-packages/click/core.py", line 1442, in __call__
    return self.main(*args, **kwargs)
  File "/share/org/YZWL/yzwl_lixg/miniforge3/envs/biopytools/lib/python3.10/site-packages/click/core.py", line 1363, in main
    rv = self.invoke(ctx)
  File "/share/org/YZWL/yzwl_lixg/miniforge3/envs/biopytools/lib/python3.10/site-packages/click/core.py", line 1830, in invoke
    return _process_result(sub_ctx.command.invoke(sub_ctx))
  File "/share/org/YZWL/yzwl_lixg/miniforge3/envs/biopytools/lib/python3.10/site-packages/click/core.py", line 1226, in invoke
    return ctx.invoke(self.callback, **ctx.params)
  File "/share/org/YZWL/yzwl_lixg/miniforge3/envs/biopytools/lib/python3.10/site-packages/click/core.py", line 794, in invoke
    return callback(*args, **kwargs)
  File "/share/org/YZWL/yzwl_lixg/software/biopytools/biopytools/cli/commands/vcf2gene.py", line 65, in vcf2gene
    vcf2gene_main = _lazy_import_vcf2gene_main()
  File "/share/org/YZWL/yzwl_lixg/software/biopytools/biopytools/cli/commands/vcf2gene.py", line 14, in _lazy_import_vcf2gene_main
    from ...vcf2gene.main import main as vcf2gene_main
  File "/share/org/YZWL/yzwl_lixg/software/biopytools/biopytools/vcf2gene/__init__.py", line 26, in <module>
    from .main import VCF2GeneRunner
  File "/share/org/YZWL/yzwl_lixg/software/biopytools/biopytools/vcf2gene/main.py", line 9, in <module>
    from .calculator import VariantAnnotator
  File "/share/org/YZWL/yzwl_lixg/software/biopytools/biopytools/vcf2gene/calculator.py", line 142
    for alt allele in alts:
            ^^^^^^
SyntaxError: invalid syntax
Job 69274298 stderr output:

